--- a/tests/README
+++ b/tests/README
@@ -3,13 +3,13 @@ let Point = {};
 Point.init = Fn.new{|x, y|
     this.x = x;
     this.y = y;
-    return this;
 };
-Point.+ = Fn.new {|other|  # yes, this is allowed
-    return Point.clone.init(this.x + other.x, this.y + other.y);
+# (some) dots are optional
+Point.+ = Fn new {|other|  # yes, this is allowed
+    return Point new(this x + other x, this y + other y);
 };
-let p1 = Point.clone.init(1, 2);
-let p2 = Point.clone.init(3, 4);
+let p1 = Point.new(1, 2);
+let p2 = Point.new(3, 4);
 let result = p1 + p2;
 assert result.x == 4;
 assert result.y == 6;
