--- a/tests/README
+++ b/tests/README
@@ -1,15 +1,15 @@
 # Comments start with '#'
-let Point = {};
+let Point = {}; # semicolons are optional
 Point.init = Fn.new{|x, y|
-    this.x = x;
-    this.y = y;
-};
+    this.x = x
+    this.y = y
+}
 # (some) dots are optional
 Point.+ = Fn new {|other|  # yes, this is allowed
-    return Point new(this x + other x, this y + other y);
-};
-let p1 = Point.new(1, 2);
-let p2 = Point.new(3, 4);
-let result = p1 + p2;
-assert result.x == 4;
-assert result.y == 6;
+    return Point new(this x + other x, this y + other y)
+}
+let p1 = Point.new(1, 2)
+let p2 = Point.new(3, 4)
+let result = p1 + p2
+assert result.x == 4
+assert result.y == 6
